[package]
name = "rusty_array"
version = "0.1.0"
authors = ["BERGER Thierry <thierry.berger@externe.e-i.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"